test/neg/bug87.scala
object foo {
  new foo.C;
}
